refactor: use objectMapper field